// Auto-Generated by si-registry!
// Do not edit by hand!
// This means you! It won't last! You'll be sad!

// Prelude
syntax = "proto3";

package si.component;

import "google/protobuf/wrappers.proto";

// Objects

// constraints

// properties

// data

// entityMethods

// entityActions

// componentMethods

// internalOnly


message ComponentSiProperties {
  google.protobuf.StringValue integration_id = 1;
  google.protobuf.StringValue integration_service_id = 2;
  google.protobuf.Int64Value version = 3;
}

// entity

// component
