// Auto-Generated by si-registry!
// Do not edit by hand!
// This means you! It won't last! You'll be sad!

syntax = "proto3";

package si.core;
import "google/protobuf/wrappers.proto";
import "si-registry/proto/si.data.proto";
import "si-registry/proto/si.cea.proto";
service Core {
  rpc ApplicationComponentGet(ApplicationComponentGetRequest) returns (ApplicationComponentGetReply);
  rpc ApplicationComponentList(ApplicationComponentListRequest) returns (ApplicationComponentListReply);
  rpc ApplicationComponentCreate(ApplicationComponentCreateRequest) returns (ApplicationComponentCreateReply);
  rpc ApplicationComponentPick(ApplicationComponentPickRequest) returns (ApplicationComponentPickReply);
  rpc ApplicationEntityGet(ApplicationEntityGetRequest) returns (ApplicationEntityGetReply);
  rpc ApplicationEntityList(ApplicationEntityListRequest) returns (ApplicationEntityListReply);
  rpc ApplicationEntityCreate(ApplicationEntityCreateRequest) returns (ApplicationEntityCreateReply);
  rpc ApplicationEntityDelete(ApplicationEntityDeleteRequest) returns (ApplicationEntityDeleteReply);
  rpc ApplicationEntityUpdate(ApplicationEntityUpdateRequest) returns (ApplicationEntityUpdateReply);
  rpc ApplicationEntitySync(ApplicationEntitySyncRequest) returns (ApplicationEntitySyncReply);
  rpc ApplicationEntityPhantomEdit(ApplicationEntityPhantomEditRequest) returns (ApplicationEntityPhantomEditReply);
  rpc ApplicationEntityEventList(ApplicationEntityEventListRequest) returns (ApplicationEntityEventListReply);
  rpc ServiceComponentGet(ServiceComponentGetRequest) returns (ServiceComponentGetReply);
  rpc ServiceComponentList(ServiceComponentListRequest) returns (ServiceComponentListReply);
  rpc ServiceComponentCreate(ServiceComponentCreateRequest) returns (ServiceComponentCreateReply);
  rpc ServiceComponentPick(ServiceComponentPickRequest) returns (ServiceComponentPickReply);
  rpc ServiceEntityGet(ServiceEntityGetRequest) returns (ServiceEntityGetReply);
  rpc ServiceEntityList(ServiceEntityListRequest) returns (ServiceEntityListReply);
  rpc ServiceEntityCreate(ServiceEntityCreateRequest) returns (ServiceEntityCreateReply);
  rpc ServiceEntityDelete(ServiceEntityDeleteRequest) returns (ServiceEntityDeleteReply);
  rpc ServiceEntityUpdate(ServiceEntityUpdateRequest) returns (ServiceEntityUpdateReply);
  rpc ServiceEntitySync(ServiceEntitySyncRequest) returns (ServiceEntitySyncReply);
  rpc ServiceEntityImageEdit(ServiceEntityImageEditRequest) returns (ServiceEntityImageEditReply);
  rpc ServiceEntityPortEdit(ServiceEntityPortEditRequest) returns (ServiceEntityPortEditReply);
  rpc ServiceEntityReplicasEdit(ServiceEntityReplicasEditRequest) returns (ServiceEntityReplicasEditReply);
  rpc ServiceEntityDeploy(ServiceEntityDeployRequest) returns (ServiceEntityDeployReply);
  rpc ServiceEntityEventList(ServiceEntityEventListRequest) returns (ServiceEntityEventListReply);
  rpc SystemComponentGet(SystemComponentGetRequest) returns (SystemComponentGetReply);
  rpc SystemComponentList(SystemComponentListRequest) returns (SystemComponentListReply);
  rpc SystemComponentCreate(SystemComponentCreateRequest) returns (SystemComponentCreateReply);
  rpc SystemComponentPick(SystemComponentPickRequest) returns (SystemComponentPickReply);
  rpc SystemEntityGet(SystemEntityGetRequest) returns (SystemEntityGetReply);
  rpc SystemEntityList(SystemEntityListRequest) returns (SystemEntityListReply);
  rpc SystemEntityCreate(SystemEntityCreateRequest) returns (SystemEntityCreateReply);
  rpc SystemEntityDelete(SystemEntityDeleteRequest) returns (SystemEntityDeleteReply);
  rpc SystemEntityUpdate(SystemEntityUpdateRequest) returns (SystemEntityUpdateReply);
  rpc SystemEntitySync(SystemEntitySyncRequest) returns (SystemEntitySyncReply);
  rpc SystemEntityPhantomEdit(SystemEntityPhantomEditRequest) returns (SystemEntityPhantomEditReply);
  rpc SystemEntityEventList(SystemEntityEventListRequest) returns (SystemEntityEventListReply);
}
message ApplicationComponentConstraints {
  google.protobuf.StringValue component_name = 1;
  google.protobuf.StringValue component_display_name = 2;
}
message ApplicationComponent {
  google.protobuf.StringValue id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue display_name = 3;
  si.data.DataStorable si_storable = 4;
  google.protobuf.StringValue description = 5;
  si.core.ApplicationComponentConstraints constraints = 6;
  si.cea.ComponentSiProperties si_properties = 7;
}
message ApplicationComponentGetRequest {
  google.protobuf.StringValue id = 1001;
}
message ApplicationComponentGetReply {
  si.core.ApplicationComponent item = 1001;
}
message ApplicationComponentListRequest {
  si.data.DataQuery query = 1;
  google.protobuf.UInt32Value page_size = 2;
  google.protobuf.StringValue order_by = 3;
  si.data.DataPageTokenOrderByDirection order_by_direction = 4;
  google.protobuf.StringValue page_token = 5;
  google.protobuf.StringValue scope_by_tenant_id = 6;
}
message ApplicationComponentListReply {
  repeated si.core.ApplicationComponent items = 1;
  google.protobuf.UInt32Value total_count = 2;
  google.protobuf.StringValue next_page_token = 3;
}
message ApplicationComponentCreateRequest {
  google.protobuf.StringValue name = 1001;
  google.protobuf.StringValue display_name = 1002;
  google.protobuf.StringValue description = 1003;
  si.core.ApplicationComponentConstraints constraints = 1;
  si.cea.ComponentSiProperties si_properties = 1004;
}
message ApplicationComponentCreateReply {
  si.core.ApplicationComponent item = 1;
}
message ApplicationComponentPickRequest {
  si.core.ApplicationComponentConstraints constraints = 1;
}
message ApplicationComponentPickReply {
  si.core.ApplicationComponentConstraints implicit_constraints = 1;
  si.core.ApplicationComponent component = 2;
}
message ApplicationEntityProperties {
  google.protobuf.BoolValue phantom = 1001;
}
message ApplicationEntity {
  google.protobuf.StringValue id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue display_name = 3;
  si.data.DataStorable si_storable = 4;
  google.protobuf.StringValue description = 5;
  si.cea.EntitySiProperties si_properties = 6;
  si.core.ApplicationEntityProperties properties = 7;
  si.core.ApplicationComponentConstraints constraints = 8;
  si.core.ApplicationComponentConstraints implicit_constraints = 9;
}
message ApplicationEntityGetRequest {
  google.protobuf.StringValue id = 1001;
}
message ApplicationEntityGetReply {
  si.core.ApplicationEntity item = 1001;
}
message ApplicationEntityListRequest {
  si.data.DataQuery query = 1;
  google.protobuf.UInt32Value page_size = 2;
  google.protobuf.StringValue order_by = 3;
  si.data.DataPageTokenOrderByDirection order_by_direction = 4;
  google.protobuf.StringValue page_token = 5;
  google.protobuf.StringValue scope_by_tenant_id = 6;
}
message ApplicationEntityListReply {
  repeated si.core.ApplicationEntity items = 1;
  google.protobuf.UInt32Value total_count = 2;
  google.protobuf.StringValue next_page_token = 3;
}
message ApplicationEntityCreateRequest {
  google.protobuf.StringValue name = 1;
  google.protobuf.StringValue display_name = 2;
  google.protobuf.StringValue description = 3;
  google.protobuf.StringValue workspace_id = 1001;
  google.protobuf.StringValue change_set_id = 1002;
  si.core.ApplicationEntityProperties properties = 4;
  si.core.ApplicationComponentConstraints constraints = 5;
}
message ApplicationEntityCreateReply {
  si.core.ApplicationEntity item = 1;
}
message ApplicationEntityDeleteRequest {
  google.protobuf.StringValue id = 1001;
  google.protobuf.StringValue change_set_id = 1002;
}
message ApplicationEntityDeleteReply {
  si.core.ApplicationEntity item = 1001;
}
message ApplicationEntityUpdateRequestUpdate {
  google.protobuf.StringValue name = 1001;
  google.protobuf.StringValue display_name = 1002;
  google.protobuf.StringValue description = 1003;
  si.core.ApplicationEntityProperties properties = 1004;
}
message ApplicationEntityUpdateRequest {
  google.protobuf.StringValue id = 1001;
  google.protobuf.StringValue change_set_id = 1002;
  si.core.ApplicationEntityUpdateRequestUpdate update = 1003;
}
message ApplicationEntityUpdateReply {
  si.core.ApplicationEntity item = 1001;
}
message ApplicationEntitySyncRequest {
  google.protobuf.StringValue id = 1;
}
message ApplicationEntitySyncReply {
  si.core.ApplicationEntityEvent item = 1;
}
message ApplicationEntityPhantomEditRequest {
  google.protobuf.StringValue id = 1;
  google.protobuf.BoolValue property = 1001;
}
message ApplicationEntityPhantomEditReply {
  si.core.ApplicationEntityEvent item = 1;
}
message ApplicationEntityEvent {
  google.protobuf.StringValue id = 1;
  si.data.DataStorable si_storable = 2;
  google.protobuf.StringValue action_name = 3;
  google.protobuf.StringValue create_time = 4;
  google.protobuf.StringValue updated_time = 5;
  google.protobuf.StringValue final_time = 6;
  google.protobuf.BoolValue success = 7;
  google.protobuf.BoolValue finalized = 8;
  google.protobuf.StringValue user_id = 9;
  repeated google.protobuf.StringValue output_lines = 10;
  repeated google.protobuf.StringValue error_lines = 11;
  google.protobuf.StringValue error_message = 12;
  si.core.ApplicationEntity previous_entity = 13;
  si.core.ApplicationEntity input_entity = 14;
  si.core.ApplicationEntity output_entity = 15;
  si.cea.EntityEventSiProperties si_properties = 16;
}
message ApplicationEntityEventListRequest {
  si.data.DataQuery query = 1;
  google.protobuf.UInt32Value page_size = 2;
  google.protobuf.StringValue order_by = 3;
  si.data.DataPageTokenOrderByDirection order_by_direction = 4;
  google.protobuf.StringValue page_token = 5;
  google.protobuf.StringValue scope_by_tenant_id = 6;
}
message ApplicationEntityEventListReply {
  repeated si.core.ApplicationEntityEvent items = 1;
  google.protobuf.UInt32Value total_count = 2;
  google.protobuf.StringValue next_page_token = 3;
}
message ServiceComponentConstraints {
  google.protobuf.StringValue component_name = 1;
  google.protobuf.StringValue component_display_name = 2;
}
message ServiceComponent {
  google.protobuf.StringValue id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue display_name = 3;
  si.data.DataStorable si_storable = 4;
  google.protobuf.StringValue description = 5;
  si.core.ServiceComponentConstraints constraints = 6;
  si.cea.ComponentSiProperties si_properties = 7;
}
message ServiceComponentGetRequest {
  google.protobuf.StringValue id = 1001;
}
message ServiceComponentGetReply {
  si.core.ServiceComponent item = 1001;
}
message ServiceComponentListRequest {
  si.data.DataQuery query = 1;
  google.protobuf.UInt32Value page_size = 2;
  google.protobuf.StringValue order_by = 3;
  si.data.DataPageTokenOrderByDirection order_by_direction = 4;
  google.protobuf.StringValue page_token = 5;
  google.protobuf.StringValue scope_by_tenant_id = 6;
}
message ServiceComponentListReply {
  repeated si.core.ServiceComponent items = 1;
  google.protobuf.UInt32Value total_count = 2;
  google.protobuf.StringValue next_page_token = 3;
}
message ServiceComponentCreateRequest {
  google.protobuf.StringValue name = 1001;
  google.protobuf.StringValue display_name = 1002;
  google.protobuf.StringValue description = 1003;
  si.core.ServiceComponentConstraints constraints = 1;
  si.cea.ComponentSiProperties si_properties = 1004;
}
message ServiceComponentCreateReply {
  si.core.ServiceComponent item = 1;
}
message ServiceComponentPickRequest {
  si.core.ServiceComponentConstraints constraints = 1;
}
message ServiceComponentPickReply {
  si.core.ServiceComponentConstraints implicit_constraints = 1;
  si.core.ServiceComponent component = 2;
}
message ServiceEntityProperties {
  google.protobuf.StringValue image = 1001;
  google.protobuf.UInt32Value port = 1002;
  google.protobuf.UInt32Value replicas = 1003;
}
message ServiceEntity {
  google.protobuf.StringValue id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue display_name = 3;
  si.data.DataStorable si_storable = 4;
  google.protobuf.StringValue description = 5;
  si.cea.EntitySiProperties si_properties = 6;
  si.core.ServiceEntityProperties properties = 7;
  si.core.ServiceComponentConstraints constraints = 8;
  si.core.ServiceComponentConstraints implicit_constraints = 9;
}
message ServiceEntityGetRequest {
  google.protobuf.StringValue id = 1001;
}
message ServiceEntityGetReply {
  si.core.ServiceEntity item = 1001;
}
message ServiceEntityListRequest {
  si.data.DataQuery query = 1;
  google.protobuf.UInt32Value page_size = 2;
  google.protobuf.StringValue order_by = 3;
  si.data.DataPageTokenOrderByDirection order_by_direction = 4;
  google.protobuf.StringValue page_token = 5;
  google.protobuf.StringValue scope_by_tenant_id = 6;
}
message ServiceEntityListReply {
  repeated si.core.ServiceEntity items = 1;
  google.protobuf.UInt32Value total_count = 2;
  google.protobuf.StringValue next_page_token = 3;
}
message ServiceEntityCreateRequest {
  google.protobuf.StringValue name = 1;
  google.protobuf.StringValue display_name = 2;
  google.protobuf.StringValue description = 3;
  google.protobuf.StringValue workspace_id = 1001;
  google.protobuf.StringValue change_set_id = 1002;
  si.core.ServiceEntityProperties properties = 4;
  si.core.ServiceComponentConstraints constraints = 5;
}
message ServiceEntityCreateReply {
  si.core.ServiceEntity item = 1;
}
message ServiceEntityDeleteRequest {
  google.protobuf.StringValue id = 1001;
  google.protobuf.StringValue change_set_id = 1002;
}
message ServiceEntityDeleteReply {
  si.core.ServiceEntity item = 1001;
}
message ServiceEntityUpdateRequestUpdate {
  google.protobuf.StringValue name = 1001;
  google.protobuf.StringValue display_name = 1002;
  google.protobuf.StringValue description = 1003;
  si.core.ServiceEntityProperties properties = 1004;
}
message ServiceEntityUpdateRequest {
  google.protobuf.StringValue id = 1001;
  google.protobuf.StringValue change_set_id = 1002;
  si.core.ServiceEntityUpdateRequestUpdate update = 1003;
}
message ServiceEntityUpdateReply {
  si.core.ServiceEntity item = 1001;
}
message ServiceEntitySyncRequest {
  google.protobuf.StringValue id = 1;
}
message ServiceEntitySyncReply {
  si.core.ServiceEntityEvent item = 1;
}
message ServiceEntityImageEditRequest {
  google.protobuf.StringValue id = 1;
  google.protobuf.StringValue property = 1001;
}
message ServiceEntityImageEditReply {
  si.core.ServiceEntityEvent item = 1;
}
message ServiceEntityPortEditRequest {
  google.protobuf.StringValue id = 1;
  google.protobuf.UInt32Value property = 1001;
}
message ServiceEntityPortEditReply {
  si.core.ServiceEntityEvent item = 1;
}
message ServiceEntityReplicasEditRequest {
  google.protobuf.StringValue id = 1;
  google.protobuf.UInt32Value property = 1001;
}
message ServiceEntityReplicasEditReply {
  si.core.ServiceEntityEvent item = 1;
}
message ServiceEntityDeployRequest {
  google.protobuf.StringValue id = 1;
}
message ServiceEntityDeployReply {
  si.core.ServiceEntityEvent item = 1;
}
message ServiceEntityEvent {
  google.protobuf.StringValue id = 1;
  si.data.DataStorable si_storable = 2;
  google.protobuf.StringValue action_name = 3;
  google.protobuf.StringValue create_time = 4;
  google.protobuf.StringValue updated_time = 5;
  google.protobuf.StringValue final_time = 6;
  google.protobuf.BoolValue success = 7;
  google.protobuf.BoolValue finalized = 8;
  google.protobuf.StringValue user_id = 9;
  repeated google.protobuf.StringValue output_lines = 10;
  repeated google.protobuf.StringValue error_lines = 11;
  google.protobuf.StringValue error_message = 12;
  si.core.ServiceEntity previous_entity = 13;
  si.core.ServiceEntity input_entity = 14;
  si.core.ServiceEntity output_entity = 15;
  si.cea.EntityEventSiProperties si_properties = 16;
}
message ServiceEntityEventListRequest {
  si.data.DataQuery query = 1;
  google.protobuf.UInt32Value page_size = 2;
  google.protobuf.StringValue order_by = 3;
  si.data.DataPageTokenOrderByDirection order_by_direction = 4;
  google.protobuf.StringValue page_token = 5;
  google.protobuf.StringValue scope_by_tenant_id = 6;
}
message ServiceEntityEventListReply {
  repeated si.core.ServiceEntityEvent items = 1;
  google.protobuf.UInt32Value total_count = 2;
  google.protobuf.StringValue next_page_token = 3;
}
message SystemComponentConstraints {
  google.protobuf.StringValue component_name = 1;
  google.protobuf.StringValue component_display_name = 2;
}
message SystemComponent {
  google.protobuf.StringValue id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue display_name = 3;
  si.data.DataStorable si_storable = 4;
  google.protobuf.StringValue description = 5;
  si.core.SystemComponentConstraints constraints = 6;
  si.cea.ComponentSiProperties si_properties = 7;
}
message SystemComponentGetRequest {
  google.protobuf.StringValue id = 1001;
}
message SystemComponentGetReply {
  si.core.SystemComponent item = 1001;
}
message SystemComponentListRequest {
  si.data.DataQuery query = 1;
  google.protobuf.UInt32Value page_size = 2;
  google.protobuf.StringValue order_by = 3;
  si.data.DataPageTokenOrderByDirection order_by_direction = 4;
  google.protobuf.StringValue page_token = 5;
  google.protobuf.StringValue scope_by_tenant_id = 6;
}
message SystemComponentListReply {
  repeated si.core.SystemComponent items = 1;
  google.protobuf.UInt32Value total_count = 2;
  google.protobuf.StringValue next_page_token = 3;
}
message SystemComponentCreateRequest {
  google.protobuf.StringValue name = 1001;
  google.protobuf.StringValue display_name = 1002;
  google.protobuf.StringValue description = 1003;
  si.core.SystemComponentConstraints constraints = 1;
  si.cea.ComponentSiProperties si_properties = 1004;
}
message SystemComponentCreateReply {
  si.core.SystemComponent item = 1;
}
message SystemComponentPickRequest {
  si.core.SystemComponentConstraints constraints = 1;
}
message SystemComponentPickReply {
  si.core.SystemComponentConstraints implicit_constraints = 1;
  si.core.SystemComponent component = 2;
}
message SystemEntityProperties {
  google.protobuf.BoolValue phantom = 1001;
}
message SystemEntity {
  google.protobuf.StringValue id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue display_name = 3;
  si.data.DataStorable si_storable = 4;
  google.protobuf.StringValue description = 5;
  si.cea.EntitySiProperties si_properties = 6;
  si.core.SystemEntityProperties properties = 7;
  si.core.SystemComponentConstraints constraints = 8;
  si.core.SystemComponentConstraints implicit_constraints = 9;
}
message SystemEntityGetRequest {
  google.protobuf.StringValue id = 1001;
}
message SystemEntityGetReply {
  si.core.SystemEntity item = 1001;
}
message SystemEntityListRequest {
  si.data.DataQuery query = 1;
  google.protobuf.UInt32Value page_size = 2;
  google.protobuf.StringValue order_by = 3;
  si.data.DataPageTokenOrderByDirection order_by_direction = 4;
  google.protobuf.StringValue page_token = 5;
  google.protobuf.StringValue scope_by_tenant_id = 6;
}
message SystemEntityListReply {
  repeated si.core.SystemEntity items = 1;
  google.protobuf.UInt32Value total_count = 2;
  google.protobuf.StringValue next_page_token = 3;
}
message SystemEntityCreateRequest {
  google.protobuf.StringValue name = 1;
  google.protobuf.StringValue display_name = 2;
  google.protobuf.StringValue description = 3;
  google.protobuf.StringValue workspace_id = 1001;
  google.protobuf.StringValue change_set_id = 1002;
  si.core.SystemEntityProperties properties = 4;
  si.core.SystemComponentConstraints constraints = 5;
}
message SystemEntityCreateReply {
  si.core.SystemEntity item = 1;
}
message SystemEntityDeleteRequest {
  google.protobuf.StringValue id = 1001;
  google.protobuf.StringValue change_set_id = 1002;
}
message SystemEntityDeleteReply {
  si.core.SystemEntity item = 1001;
}
message SystemEntityUpdateRequestUpdate {
  google.protobuf.StringValue name = 1001;
  google.protobuf.StringValue display_name = 1002;
  google.protobuf.StringValue description = 1003;
  si.core.SystemEntityProperties properties = 1004;
}
message SystemEntityUpdateRequest {
  google.protobuf.StringValue id = 1001;
  google.protobuf.StringValue change_set_id = 1002;
  si.core.SystemEntityUpdateRequestUpdate update = 1003;
}
message SystemEntityUpdateReply {
  si.core.SystemEntity item = 1001;
}
message SystemEntitySyncRequest {
  google.protobuf.StringValue id = 1;
}
message SystemEntitySyncReply {
  si.core.SystemEntityEvent item = 1;
}
message SystemEntityPhantomEditRequest {
  google.protobuf.StringValue id = 1;
  google.protobuf.BoolValue property = 1001;
}
message SystemEntityPhantomEditReply {
  si.core.SystemEntityEvent item = 1;
}
message SystemEntityEvent {
  google.protobuf.StringValue id = 1;
  si.data.DataStorable si_storable = 2;
  google.protobuf.StringValue action_name = 3;
  google.protobuf.StringValue create_time = 4;
  google.protobuf.StringValue updated_time = 5;
  google.protobuf.StringValue final_time = 6;
  google.protobuf.BoolValue success = 7;
  google.protobuf.BoolValue finalized = 8;
  google.protobuf.StringValue user_id = 9;
  repeated google.protobuf.StringValue output_lines = 10;
  repeated google.protobuf.StringValue error_lines = 11;
  google.protobuf.StringValue error_message = 12;
  si.core.SystemEntity previous_entity = 13;
  si.core.SystemEntity input_entity = 14;
  si.core.SystemEntity output_entity = 15;
  si.cea.EntityEventSiProperties si_properties = 16;
}
message SystemEntityEventListRequest {
  si.data.DataQuery query = 1;
  google.protobuf.UInt32Value page_size = 2;
  google.protobuf.StringValue order_by = 3;
  si.data.DataPageTokenOrderByDirection order_by_direction = 4;
  google.protobuf.StringValue page_token = 5;
  google.protobuf.StringValue scope_by_tenant_id = 6;
}
message SystemEntityEventListReply {
  repeated si.core.SystemEntityEvent items = 1;
  google.protobuf.UInt32Value total_count = 2;
  google.protobuf.StringValue next_page_token = 3;
}
